Update page title and modify liquid button structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Diego Albornoz | iOS Liquid Glass</title>
+<title>Diego Albornoz | Software Engineer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet"> 
 
@@ -959,15 +959,15 @@ body.light .navbar-glass{
   <br>
   <br>
   
-  <div class="liquid-btn bottom-center-btn" id="openGlassModal">
+  
+<div class="container"> 
+ 
+ 
+<div class="liquid-btn bottom-center-btn" id="openGlassModal">
 
 
     <img src="aca.png" alt="Diego" width="100">
   </div>
-<div class="container"> 
- 
- 
-
 
   <div class="glass header">  
     
