--- a/index.html
+++ b/index.html
@@ -939,10 +939,10 @@ body.light .navbar-glass{
  
 
   <ul class="nav-center">
-    <li><a href="#">🏠</a></li>
-    <li><a href="/pages/index.html">Ver mí CV</a></li>
-    <li><a href="https://www.softechti.cl/">Softech.cl - MyPyme</a></li>
-    <li><a href="/page2/index.html">Mis Certificaciones</a></li>
+  
+    <li><a href="/pages/index.html">Ver CV</a></li>
+    <li><a href="https://www.softechti.cl/">Softech-MyPyme</a></li>
+    <li><a href="/page2/index.html">Certificaciones</a></li>
   </ul>
  
 
