--- a/index.html
+++ b/index.html
@@ -940,9 +940,9 @@ body.light .navbar-glass{
 
   <ul class="nav-center">
   
-    <li><a href="/pages/index.html">Ver CV</a></li>
+    <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/VerCurriculum.pdf">Ver CV</a></li>
     <li><a href="https://www.softechti.cl/">Softech-MyPyme</a></li>
-    <li><a href="/page2/index.html">Certificaciones</a></li>
+    <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/tmp/DOCUMENTOS/DOCUMENTACION_ACADEMICA.zip">Doc.Academicos</a></li>
   </ul>
  
 
