--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@ body.light .navbar-glass{
   
     <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/VerCurriculum.pdf">Ver CV</a></li>
     <li><a href="https://www.softechti.cl/">Softech-MyPyme</a></li>
-    <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/tmp/DOCUMENTOS/DOCUMENTACION_ACADEMICA.zip">Doc.Academicos</a></li>
+    <li><a href="/page2/documento.pdf">Doc.Academicos</a></li>
   </ul>
  
 
