Update links in index.html

--- a/index.html
+++ b/index.html
@@ -1376,14 +1376,14 @@ body {
        <span>Git</span>
       </a> 
 
-        <a href="https://github.com/dalbornoz-cl" target="_blank">
+        <a href="https://repositorio.usm.cl/entities/tesis/7b63e1e1-f2b9-40a1-864c-73fa390df53e" target="_blank">
        <img src="Logo_UTFSM.png">  
        <br>
        <span>Memoria USM</span>
    
       </a> 
 
-      <a href="https://github.com/dalbornoz-cl" target="_blank">
+      <a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/Curriculum_Dalbornoz_IngSoftware.pdf" target="_blank">
        <img src="pdf.png">  
        <br>
        <span>Mi CV</span>
