Update navigation links and document download options

--- a/index.html
+++ b/index.html
@@ -1298,10 +1298,10 @@ body {
  
 
   <ul class="nav-center">
-    <li><a href="#">🏠</a></li>
-    <li><a href="/pages/index.html">Ver mí CV</a></li>
-    <li><a href="https://www.softechti.cl/">Softech.cl - MyPyme</a></li>
-    <li><a href="/page2/index.html">Mis Certificaciones</a></li>
+    <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/Certificaciones.pdf">Certificaciones</a></li>
+    <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/VerCurriculum.pdf">Mí CV</a></li>
+    <li><a href="https://www.softechti.cl/">Softech.cl</a></li>
+    <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/DocAcademicosOnly.pdf">Resumen Academico</a></li>
   </ul>
  
 
@@ -1383,10 +1383,10 @@ body {
    
       </a> 
 
-      <a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/Curriculum_Dalbornoz_IngSoftware.pdf" target="_blank">
+      <a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/tmp/DOCUMENTOS/DOCUMENTACION_ACADEMICA.zip" target="_blank">
        <img src="pdf.png">  
        <br>
-       <span>Mi CV</span>
+       <span>Descargar.zip</span>
    
       </a>
     </div>
