--- a/index.html
+++ b/index.html
@@ -1293,21 +1293,13 @@ body {
 <body> 
 <nav class="navbar-glass" id="navbar">
   <div class="nav-left"><div class="nav-toggle" id="navToggle">☰</div>
-
-    
- 
-
   <ul class="nav-center">
+    <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/Certificaciones.pdf">🖼️</a></li>
     <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/Certificaciones.pdf">Certificaciones</a></li>
     <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/VerCurriculum.pdf">Mí CV</a></li>
     <li><a href="https://www.softechti.cl/">Softech.cl</a></li>
     <li><a href="https://s3.us-east-2.amazonaws.com/neox.medios.publicos/AWS/Dalbornoz/DocAcademicosOnly.pdf">Resumen Academico</a></li>
   </ul>
- 
-
-  
-
- 
 </nav>
 
 
