--- a/index.html
+++ b/index.html
@@ -1810,7 +1810,12 @@ body {
 
 <nav class="glass-nav" id="glassNav">
   <ul class="nav-list">
-
+  <li>
+  <a href="#" id="openCarouselLink">
+    <i class="fa-brands fa-instagram"></i>
+    Instagram
+  </a>
+</li>
     <li>
   <a href="#" id="openCarouselLink">
     <i class="fa-brands fa-instagram"></i>
